--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,12 @@ a:hover {
     text-align:center;
     margin-bottom:0;
     background-color: gray;
-    padding-top: 20px;
-    position:sticky;
+    padding: 30px 0px 30px 0px;
+   }
+
+.copyright {
+    color: #dddddd;
+    font-size: 12px;
 }
 
 /*MainBody formatting*/
@@ -81,6 +85,17 @@ a:hover {
     color:gray !important;
     text-align:center;
     font-weight:bold;
+}
+.github:hover {
+    opacity:.75;
+}
+
+.linkedin:hover {
+    opacity:.75;
+}
+
+.stack:hover {
+    opacity:.75;
 }
 
 /*About Me Page*/
